[package]
name = "noteblock"
version = "0.1.0"
authors = ["negamartin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inputbot = "0.4"
clipboard = "0.5"
midly = "0.2"
flate2 = { version="1.0", default-features=false, features=["rust_backend"] }
md-5 = "0.8"

[profile.release]
lto = true
codegen-units = 1
